<resources>
    <string name="app_name">校园二手交易</string>

    <string name="translate_btn">翻译</string>
    <string name="clean_text">清除文本</string>
    <string name="translate_title">译文</string>
    <string name="explains_title">详细译义</string>
    <string name="web_title">短语</string>
    <string name="copy_success">复制成功</string>
    <string name="share_choice">请选择要分享的应用</string>
    <string name="input_text">在此输入要翻译的文本...</string>
    <string name="input_empty">输入的文本为空</string>
    <string name="translate_fail">连接超时</string>
    <string name="translate_overlong">要翻译的文本过长</string>
    <string name="deletesuccess">取消成功</string>
    <string name="refresh_success">刷新成功</string>
    <string name="cancel_success">取消成功</string>

    <string name="error">错误</string>
    <string name="OK">确定</string>
    <string name="cancel">取消</string>
    <string name="copy_done">复制成功</string>
    <string name="add_to_notebook">添加</string>
    <string name="no_input">输入为空</string>

    <string name="original_text">原文</string>
    <string name="translated_text">译文</string>

    <string name="add_comment">添加评论</string>
    <string name="community">市场</string>
    <string name="more">更多</string>
    <string name="message">消息</string>
    <string name="release">发布</string>
    <string name="user">我的</string>
    <string name="made_by">Made By </string>
    <string name="zhaoweihao">ZhaoWeihao</string>
    <string name="type_your_note_here">在这里输入你的笔记</string>
    <string name="current">当前</string>
    <string name="humidity">湿度:</string>
    <string name="wind_speed">风速:</string>
    <string name="sunrise">日出:</string>
    <string name="sunset">日落:</string>
    <string name="forecast">预报</string>
    <string name="date">日期</string>
    <string name="status">状态</string>
    <string name="high">高</string>
    <string name="low">低</string>
    <string name="detail">细节</string>
    <string name="wind">风</string>
    <string name="chill">寒意:</string>
    <string name="direction">方向:</string>
    <string name="speed">速度:</string>
    <string name="atmosphere">大气</string>
    <string name="pressure">压强:</string>
    <string name="rising">上升气流:</string>
    <string name="visibility">可见度:</string>
    <string name="geographic_location">地理位置</string>
    <string name="latitude">纬度:</string>
    <string name="longitude">经度:</string>
    <string name="address">地址:</string>
    <string name="powered_by">POWERED BY </string>
    <string name="yahoo_weather">YAHOO!WEATHER</string>
    <string name="weather">天气</string>
    <string name="note">云笔记</string>
    <string name="translate">翻译</string>
    <string name="title_of_your_thing">标题 品类品牌型号都是买家喜欢搜索的</string>
    <string name="detail_of_your_thing">描述一下宝贝的细节或故事</string>
    <string name="add_a_picture">添加照片</string>
    <string name="your_username">你的用户名(必填)</string>
    <string name="your_password">你的密码(必填)</string>
    <string name="confirm_your_password">确认你的密码(必填)</string>
    <string name="your_email_optional">你的电邮(必填)</string>
    <string name="signup">注册</string>
    <string name="you_are_not_signin">你没有登录</string>
    <string name="signin">登录</string>
    <string name="signout">登出</string>
    <string name="comment_title">评论</string>
    <string name="comment_delete_title">你确定要删除这个帖子吗?</string>
    <string name="comment_delete_message">这不能被恢复</string>
    <string name="comment_sure">是的，我很确定</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="delete_cancel">不，我想取消</string>
    <string name="not_signin_text">你还没有登录</string>
    <string name="empty_text">评论内容不能为空</string>
    <string name="add_commit_success">增加评论成功</string>
    <string name="add_commit_failed">增加评论失败</string>
    <string name="refresh_failed">刷新失败</string>
    <string name="check_network_status">请确定你的网络状态</string>
    <string name="post_success">发帖子成功</string>
    <string name="post_failed">发帖子失败</string>
    <string name="empty_text_warn">空文本</string>
    <string name="note_title">云笔记</string>
    <string name="delete_warn">删除</string>
    <string name="edit_title">编辑</string>
    <string name="save_success">成功保存</string>
    <string name="update_success">成功更新</string>
    <string name="save_failed">保存失败</string>
    <string name="post_title">帖子</string>
    <string name="can_be_empty">不能为空</string>
    <string name="signin_success">登录成功</string>
    <string name="signin_failed">登录失败</string>
    <string name="confirm_pwd_not_pwd">请确认两次输入的密码一致</string>
    <string name="signup_success">注册成功</string>
    <string name="signup_failed">注册失败</string>
    <string name="signout_success">登出成功</string>
    <string name="not_signin_warn">你没有登录</string>
</resources>
