<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/animation_list"
    android:id="@+id/container_1">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/avatar"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_username_1"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:met_floatingLabel="highlight"
            android:layout_marginBottom="15dp"
            android:hint="@string/your_username"
            app:met_textColor="@color/white"
            app:met_floatingLabelTextSize="15sp"
            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/et_password_1"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            app:met_floatingLabel="highlight"
            android:layout_marginBottom="15dp"
            android:hint="@string/your_password"
            app:met_textColor="@color/white"
            app:met_floatingLabelTextSize="15sp"
            />

        <Button
            android:id="@+id/btn_signin_2"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background2"
            android:text="@string/signin"/>
        <Button
            android:id="@+id/btn_signup_1"
            android:layout_gravity="center"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background3"
            android:textColor="@color/colorPrimary"
            android:text="@string/signup"/>

    </LinearLayout>


</LinearLayout>